--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=Investment
 
+# Server Configuration
+server.port=${PORT:8080}
+
 # Firebase Configuration (Firestore)
-firebase.credentials.path=serviceAccountKey.json
+# Priority: Environment variable > File path > Default
+firebase.credentials.path=${FIREBASE_CREDENTIALS_PATH:serviceAccountKey.json}
+firebase.credentials.json=${FIREBASE_CREDENTIALS_JSON:}
 
 # JWT Configuration
-jwt.secret=your-secret-key-change-this-in-production-minimum-256-bits-long-for-security
-jwt.expiration=86400000
+jwt.secret=${JWT_SECRET:your-secret-key-change-this-in-production-minimum-256-bits-long-for-security}
+jwt.expiration=${JWT_EXPIRATION:86400000}
