--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ firebase.credentials.json=${FIREBASE_CREDENTIALS_JSON:}
 # JWT Configuration
 jwt.secret=${JWT_SECRET:your-secret-key-change-this-in-production-minimum-256-bits-long-for-security}
 jwt.expiration=${JWT_EXPIRATION:86400000}
+
+# Email Configuration
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+spring.mail.password=${SENDGRID_API_KEY}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+spring.mail.from=register@egxmoneymadesimplebyccg.com
