--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ firebase.credentials.json=${FIREBASE_CREDENTIALS_JSON:}
 jwt.secret=${JWT_SECRET:your-secret-key-change-this-in-production-minimum-256-bits-long-for-security}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework.mail.javamail=DEBUG
+logging.level.com.sun.mail=DEBUG
+
 # Email Configuration
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
